--- a/app/src/main/res/layout/activity_confusion_1.xml
+++ b/app/src/main/res/layout/activity_confusion_1.xml
@@ -1139,7 +1139,7 @@
                             android:orientation="horizontal">
 
                             <TextView
-                                android:id="@+id/textView38"
+                                android:id="@+id/ayamari11"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -1240,7 +1240,7 @@
                             android:orientation="horizontal">
 
                             <TextView
-                                android:id="@+id/textView39"
+                                android:id="@+id/ayamari12"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -1341,7 +1341,7 @@
                             android:orientation="horizontal">
 
                             <TextView
-                                android:id="@+id/textView40"
+                                android:id="@+id/ayamari13"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -1442,7 +1442,7 @@
                             android:orientation="horizontal">
 
                             <TextView
-                                android:id="@+id/textView41"
+                                android:id="@+id/ayamari14"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -1543,7 +1543,7 @@
                             android:orientation="horizontal">
 
                             <TextView
-                                android:id="@+id/textView42"
+                                android:id="@+id/ayamari15"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -1644,7 +1644,7 @@
                             android:orientation="horizontal">
 
                             <TextView
-                                android:id="@+id/textView43"
+                                android:id="@+id/ayamari16"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -1745,7 +1745,7 @@
                             android:orientation="horizontal">
 
                             <TextView
-                                android:id="@+id/textView44"
+                                android:id="@+id/ayamari17"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -1846,7 +1846,7 @@
                             android:orientation="horizontal">
 
                             <TextView
-                                android:id="@+id/textView45"
+                                android:id="@+id/ayamari18"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -1947,7 +1947,7 @@
                             android:orientation="horizontal">
 
                             <TextView
-                                android:id="@+id/textView46"
+                                android:id="@+id/ayamari19"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -2048,7 +2048,7 @@
                             android:orientation="horizontal">
 
                             <TextView
-                                android:id="@+id/textView47"
+                                android:id="@+id/ayamari20"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
